# VaulTLS

./: .env.example  .env.example.sqlite  .gitignore  Containerfile  DEPLOYMENT_READINESS_ASSESSMENT.md  GEMINI.md  README.md  SETTINGS.md  cookies.txt  docker-compose.yml  openssl_rootca.cnf  package-lock.json  settings.example.json  settings.json  start-vaultls.sh  task_todo_list.md  tasklist.md  test.md  test_cert_ext.rs  test_crl.sh  webServer.csr
backend/: Cargo.toml  cert.der
backend/crl/: ca_1_1763632538014.crl  current.crl
backend/migrations/01-initial/: up.sql
backend/migrations/05-add-ca-source/: down.sql  up.sql
backend/migrations/06-certificate-chain/: down.sql  up.sql
backend/migrations/07-certificate-revocation/: up.sql
backend/migrations/08-fix-revocation-foreign-key/: down.sql  up.sql
backend/migrations/09-add-revoked-flag/: down.sql  up.sql
backend/migrations/10-add-root-ca-flag/: up.sql
backend/migrations/11-audit-logs/: up.sql
backend/migrations/12-add-custom-reason/: up.sql
backend/migrations/13-add-ca-urls/: up.sql
backend/migrations/14-password-migration/: down.sql  up.sql
backend/migrations/15-password-reset-tokens/: down.sql  up.sql
backend/migrations/16-failed-login-attempts/: up.sql
backend/src/: api.rs  audit.rs  cert.rs  constants.rs  db.rs  helper.rs  lib.rs  ratelimit.rs  settings.rs
backend/src/auth/: oidc_auth.rs  password_auth.rs  session_auth.rs
backend/src/data/: api.rs  enums.rs  error.rs  objects.rs
backend/tests/: integration_tests.rs  ratelimit_test.rs  verify_defaults.rs  workflow_csr_signing.rs
(+66 files in other folders)
