[package]
name = "backend"
version = "0.9.4"
edition = "2024"

[[bin]]
name = "backend"
path = "src/main.rs"

[lib]
name = "vaultls"
path = "src/lib.rs"

[dependencies]
rocket = { version = "0.5", features = ["json", "secrets"] }
rocket_cors = "0.6"
rocket_okapi = { version = "0.9", features = ["secrets", "rapidoc"] }
schemars = { version = "0.8", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
rusqlite = { version = "0.37", features = ["bundled-sqlcipher"] }
r2d2 = "0.8"
r2d2_sqlite = { version = "0.31", features = ["bundled-sqlcipher"] }
openssl = "0.10"
argon2 = "0.5"
jsonwebtoken = "9"
openidconnect = "4.0"
anyhow = "1.0"
num_enum = "0.7"
lettre = { version = "0.11", features = ["tokio1", "builder", "smtp-transport", "tokio1-native-tls"] }
maud = "0.27"
chrono = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
passwords = "3.1"
include_dir = "0.7"
rusqlite_migration = {  version = "2.2", features = ["from-directory"] }
const_format = "0.2"
once_cell = "1.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
derive_deref = "1.1"
parking_lot = "0.12"

[dev-dependencies]
x509-parser = "0.17"
rustls = { version = "0.23.29", features = ["aws-lc-rs"] }
tokio-rustls = "0.26.1"
